Security hotspot fix and sonar cleanup